--- a/publico/index.html
+++ b/publico/index.html
@@ -8,7 +8,16 @@
 
 <p>Bienvenido</p>
 
+<ol id="messages"></ol>
+
+<form id="message-form">
+	<input name="message" type="text" placeholder="Message"/>
+	<button>Enviar</button>
+	
+</form>
+
 <script src="/socket.io/socket.io.js"></script> 
+<script src="/js/libs/jquery-3.6.0.min.js"></script>
 <script src="/js/index.js"></script>
 
 
