--- a/publico/index.html
+++ b/publico/index.html
@@ -16,6 +16,8 @@
 	
 </form>
 
+<button id="enviar-ubicacion">Enviar ubicación</button>
+
 <script src="/socket.io/socket.io.js"></script> 
 <script src="/js/libs/jquery-3.6.0.min.js"></script>
 <script src="/js/index.js"></script>
