--- a/publico/index.html
+++ b/publico/index.html
@@ -10,9 +10,9 @@
 
 <ol id="messages"></ol>
 
-<form id="message-form">
+ <!-- <form id="message-form"> 
 	<input name="message" type="text" placeholder="Message"/>
-	<button>Enviar</button>
+	<button>Enviar</button> -->
 	
 </form>
 
