--- a/publico/telmovil.html
+++ b/publico/telmovil.html
@@ -289,7 +289,7 @@
                         <textarea rows="5" class="form-control" placeholder="Ingrese el mensaje y el link para solicitar ubicación." required name="message" id="message"></textarea>
                     </div> -->
                     <div>
-                        <button href="telmovil.html" type="submit" class="btn btn-primary" name="submit">Enviar SMS</button>
+                        <button  type="submit" class="btn btn-primary" name="submit">Enviar SMS</button>
                     </div>
                 </form>
             </div>
