--- a/publico/index.html
+++ b/publico/index.html
@@ -264,14 +264,8 @@
 
    
 
-   <div class="container-fluid py-4">
-      <div class="row">
-        <div class="col-xl-12 col-lg-7">
-
-
-      <div class="col-md-3 mx-auto">
-      <a href="sesion.html" type="button" class="btn btn-info btn-lg btn-block" target="_blank">Iniciar sesión</a>
-      </div>
+  
+     
 
 
         <div class="container py-6">
@@ -283,6 +277,16 @@
                         <label class="form-label">Destinatario</label>
                         <input class="form-control" placeholder="Ingrese el número del destinatario." type="numeroa" name="numeroa" id="numeroa">
                     </div>
+
+                                        <div class="form-group mb-3">
+                        <label for="message" class="form-label">Mensaje</label>
+                        <textarea rows="5" class="form-control" placeholder="Ingrese el mensaje y el link para solicitar ubicación." type="men" name="men" id="men"></textarea>
+                    </div>
+                    <div>
+
+
+                    </div>
+
 
                 <!--    <div class="form-group mb-3">
                         <label for="message" class="form-label">Mensaje</label>
@@ -296,6 +300,15 @@
         </div>
     </div>
 
+     <div class="container-fluid py-1">
+      <div class="row">
+        <div class="col-xl-12 col-lg-7">
+
+
+
+     <div class="col-md-3 mx-auto">
+      <a href="sesion.html" type="button" class="btn btn-info btn-lg btn-block" target="_blank">Iniciar sesión</a>
+      </div>
 
 
 
